syntax = "proto3";

package go.micro.service.serverdemo;

service Serverdemo {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc HelloWorld(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
	string demo = 2;
}

message Response {
	string message = 1;
	int64 code = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
